--- a/css/style.css
+++ b/css/style.css
@@ -2320,7 +2320,7 @@ footer.ftshap:before {
 }
 
 .footer-social-media-icons a:hover {
-  color: #ff1f8e !important;
+  color: #01c8ff !important;
 }
 
 .footer-row2 a,
